--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>title</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-      <script src="js/script.js"></script>
-      
-    </body>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+
+  <body>
+    <p>It Works!</p>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
